# ros1-ros2-bridge-demo

./: .gitignore  .gitmodules  README.md  ros_bridge_notes.txt
ros1-part/catkin_ws/src/interface_demo/: CMakeLists.txt  package.xml
ros1-part/catkin_ws/src/interface_demo/src/: test_message_pub.cpp  test_message_sub.cpp  test_srv_client.cpp  test_srv_server.cpp
ros1-part/catkin_ws/src/interfaces/messages/device_msgs/: CMakeLists.txt  package.xml
ros1-part/catkin_ws/src/interfaces/messages/device_msgs/msg/: Mode.msg
ros1-part/catkin_ws/src/interfaces/services/device_srvs/: CMakeLists.txt  package.xml
ros1-part/catkin_ws/src/ros1_part_demo/: CMakeLists.txt  package.xml
ros1-part/catkin_ws/src/ros1_part_demo/src/: add_three_ints_client.cpp  add_two_ints_client.cpp  add_two_ints_server.cpp  ros1_demo.cpp  ros1_listener.cpp
ros1-ros2-bridge/: docker-compose.yml  ros1.Dockerfile
ros2-part/ros2_ws/src/interface_demo/: CMakeLists.txt  package.xml
ros2-part/ros2_ws/src/interface_demo/src/: test_message_pub.cpp  test_message_sub.cpp  test_srv_client.cpp  test_srv_server.cpp
ros2-part/ros2_ws/src/interfaces/messages/device_msgs/: CMakeLists.txt  my_mapping_rules.yaml  package.xml
ros2-part/ros2_ws/src/interfaces/messages/device_msgs/msg/: CameraCalibData.msg  GripperStatus.msg  Status.msg
ros2-part/ros2_ws/src/interfaces/services/device_srvs/: CMakeLists.txt  my_mapping_rules.yaml  package.xml
ros2-part/ros2_ws/src/ros1_demo_part/: CMakeLists.txt  package.xml
ros2-part/ros2_ws/src/ros2_part_demo/: CMakeLists.txt  package.xml
ros2-part/ros2_ws/src/ros2_part_demo/src/: add_three_ints_client.cpp  add_three_ints_server.cpp  add_two_ints_client.cpp  ros2_demo_pub.cpp  ros2_demo_sub.cpp
ros2-part/ros2_ws/src/ros2_part_interfaces/: CMakeLists.txt  my_mapping_rules.yaml  package.xml
(+2 files in other folders)
